Feat(Astro..): Creating Astro Details Modal and cards

--- a/public/App.css
+++ b/public/App.css
@@ -1,8 +1,8 @@
-.clickable-card {
+.clickable {
   box-shadow: 0 0 3px #888888;
 }
 
-.clickable-card:hover {
+.clickable:hover {
   transform: scale(1.01);
   box-shadow: 0 0 5px #888888;
 }
